# local_coordinates

./: .gitignore  README.md  SKILL.md  TUTORIAL.md  debug.py  pyproject.toml
.cursor/skills/compute-curvature/: SKILL.md
.cursor/skills/compute-curvature/references/: REFERENCE.md
.cursor/skills/compute-curvature/scripts/: sanity_check.py
.cursor/skills/compute-geodesics/: SKILL.md
.cursor/skills/compute-geodesics/references/: REFERENCE.md
.cursor/skills/compute-geodesics/scripts/: sanity_check.py
.cursor/skills/create-riemannian-metric/: SKILL.md
.cursor/skills/create-riemannian-metric/references/: REFERENCE.md
.cursor/skills/create-riemannian-metric/scripts/: sanity_check.py
.cursor/skills/jet-differentiation/: SKILL.md
.cursor/skills/jet-differentiation/references/: REFERENCE.md
.cursor/skills/jet-differentiation/scripts/: sanity_check.py
.cursor/skills/local-coordinates/: SKILL.md
.cursor/skills/local-coordinates/references/: REFERENCE.md
.cursor/skills/local-coordinates/scripts/: sanity_check.py
.cursor/skills/pullback-metric/: SKILL.md
.cursor/skills/pullback-metric/references/: REFERENCE.md
.cursor/skills/pullback-metric/scripts/: sanity_check.py
.cursor/skills/riemann-normal-coordinates/: SKILL.md
.cursor/skills/riemann-normal-coordinates/references/: REFERENCE.md
.cursor/skills/riemann-normal-coordinates/scripts/: sanity_check.py
local_coordinates/: __init__.py  base.py  basis.py  connection.py  curved_flow.py  exponential_map.py  frame.py  jacobian.py  jet.py  metric.py  monge.py  normal_coords.py  oct.py  plot_basis.py  riemann.py  svd.py  tangent.py  tensor.py
notebooks/: interactive_oct.ipynb
notes/: change_coordinates.md  jacobian.md  jet.md  levi_civita_derivation.md  normal_coordinates.md  riemann_curvature_derivation.md  rnc.md
tests/: conftest.py  test_basis.py  test_connection.py  test_curvature_comprehensive.py  test_curved_flow.py  test_exponential_map.py  test_frame.py  test_jacobian.py  test_jet.py  test_metric.py  test_monge.py  test_normal_coords.py  test_oct.py  test_plot_basis.py  test_riemann_curvature_tensor.py  test_tangent.py  test_tensor.py
tests/einsteinpy_tests/: test_ep_connection.py  test_ep_metric.py  test_ep_riemann.py
