[project]
name = "local-coordinates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coordinax>=0.22.1",
    "equinox>=0.13.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "jax>=0.7.2",
    "jaxlib>=0.7.2",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.6",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.32",
    "quax>=0.2.0",
    "quaxed>=0.10.1",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]
