[project]
name = "local-coordinates"
version = "0.1.0"
description = "A JAX-based framework for differential geometry computations on Riemannian manifolds"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "jaxtyping>=0.2.20",
    "plum-dispatch>=2.0.0",
    "diffrax>=0.5.0",
    "einops>=0.7.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
include = ["local_coordinates*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_ext"]
pythonpath = ["."]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "plot: marks tests that generate plots (deselect with '-m \"not plot\"')",
]
